gobmkida/c1/find_influence_patterns
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_influence_patterns/src/engine/influence.c:1363:6: error: use of undeclared identifier 'dword_489FD0'
v6 = dword_489FD0[j < 4]; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_influence_patterns/src/obj/1/influence.o] Error 1
